--- a/templates/novo.html
+++ b/templates/novo.html
@@ -11,7 +11,17 @@
         <div class="form-group">
             <div  class="col-md-5">
                 <label for="descricao">Descrição</label>
-                <input type="text" name="descricao" class="form-control " id="descricao">
+                <input type="text" name="descricao" class="form-control" id="descricao">
+            </div>
+        </div>
+        <div class="form-group">
+            <div  class="col-md-5">
+                <select class="form-select form-select-sm" aria-label="Small select example">
+                    <option value=""  class="form-control" selected>--Escolha uma fita--</option>
+                    <option value="1" class="form-control" >Fita1</option>
+                    <option value="2" class="form-control">fita2</option>
+                    <option value="3" class="form-control">fita3</option>
+                </select>
             </div>
         </div>
         <div class="form-group buttons">
