--- a/static/principal.css
+++ b/static/principal.css
@@ -4,3 +4,58 @@ html, body{
 .sidebarMenu{
     height: 100%;
 }
+
+select{
+    margin: 20px 0px;
+}
+
+figcaption {
+    text-align: center;
+    margin: 3px auto;
+}
+
+.fileContainer {
+    overflow: hidden;
+    position: relative;
+    transition-duration: 0.5s;
+    border-radius: 5px;
+}
+.fileContainer:hover{
+    background-color: #dddddd
+}
+
+.fileContainer [type=file] {
+    cursor: pointer;
+    display: block;
+    font-size: 999px;
+    filter: alpha(opacity=0);
+    min-height: 100%;
+    min-width: 100%;
+    opacity: 0;
+    position: absolute;
+    right: 0;
+    text-align: right;
+    top: 0;
+}
+
+td, th {
+    text-align: center;
+}
+
+.formularioFrasco {
+    display: flex;
+}
+
+.formularioImagem {
+    margin-right: 16px;
+    max-width: 200px;
+    max-height: 600px;
+}
+
+.buttons {
+    margin-top: 16px;
+}
+
+.inputBox {
+    width: 700px;
+}
