--- a/templates/produtos.html
+++ b/templates/produtos.html
@@ -21,7 +21,7 @@
           <td>{{ produto.descricao }}</td>
           <td>
             <a href="{{ url_for('edit', id=produto.id) }}" type="button" class="btn btn-outline-primary">Editar</a>
-            <a type="button" class="btn btn-outline-info">Deletar</a>
+            <a href="{{ url_for('delete', id=produto.id) }}" type="button" class="btn btn-outline-info">Deletar</a>
           </td>
         </tr>
         {% endfor %}
