--- a/templates/editar_frasco.html
+++ b/templates/editar_frasco.html
@@ -2,34 +2,35 @@
 
 {% block conteudo %}
     <h1>{{ titulo }}</h1>
-    <form action="{{ url_for('salvarEdicaoFrasco') }}" method="post">
-
+    <form action="{{ url_for('salvarEdicaoFrasco') }}" method="post" enctype="multipart/form-data">
         <figure class="img thumbnail col-md-4 formularioImagem">
-            <img class="img-fluid img-padrao" src="data:image/jpeg;base64,{{ frasco.frasco_imagem|b64encode }}">
+            {% if imagem %}
+            <img class="img-fluid img-padrao" src="data:image/jpg;charset=utf-8;base64, {{ imagem }}" alt="Imagem do Frasco">
+            {% else %}
+            <img class="img-fluid img-padrao" src="{{ img_padrao }}" alt="Imagem do Frasco">
+            {% endif %}
             <figcaption>
-              <label class="fileContainer">
-                Mudar Capa
+                <label class="fileContainer">
+                Mudar Foto
                 <input class="file-input" type="file" name="arquivo" accept=".jpg">
-              </label>
+                </label>
             </figcaption>
-          </figure>
-
-        <input type="hidden" name="id" value="{{ produto.id }}">
-        <div  class="form-group">
-            <div  class="col-md-5">
-                <label for="produto">Produto</label>
-                <input type="text" class="form-control" name="produto" id="produto" value="{{ produto.nome }}">
-            </div>
-        </div>
-        <div  class="form-group">
-            <div  class="col-md-5">
-                <label for="descricao">Descrição</label>
-                <input type="text" class="form-control" name="descricao" id="descricao" value="{{ produto.descricao }}">
-            </div>
-        </div>
-        <div class="form-group buttons">
-            <a href="{{ url_for('allFrascos') }}" class="btn btn-primary" type="button" >Voltar</a>
-            <button type="submit" class="btn btn-success" >Salvar</button>
-        </div>
+        </figure>
+        <fieldset>
+            {{ form.csrf_token() }}
+            <input type="hidden" name="id" value="{{ id }}">
+              <div class="form-group inputBox">
+                {{ form.nome.label(class="form-label") }}
+                {{ form.nome(class="form-control") }}
+              </div>
+              <div class="form-group inputBox">
+                {{ form.cor.label(class="form-label") }}
+                {{ form.cor(class="form-control") }}
+              </div>
+              <div style="margin-top: 10px;">
+                {{ form.salvar(class="btn btn-primary") }}
+                <a class="btn btn-danger" href="{{ url_for('allFrascos') }}">Voltar</a>
+              </div>
+          </fieldset>
     </form>
 {% endblock %}
