--- a/login/templates/login.html
+++ b/login/templates/login.html
@@ -1,6 +1,6 @@
 {% extends 'template.html' %}
 
-{% block conteudo %}
+1{% block conteudo %}
 		<form action="/autenticar" method="POST">
 			<div>
 				<input type="hidden" name="proxima_url" value="{{ proxima_url }}">
