--- a/templates/template_principal.html
+++ b/templates/template_principal.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='principal.css') }}">
   </head>
 <body>
-  <header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-20 shadow">
+  <!-- <header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-20 shadow">
     <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3 fs-6" href="#">Racional</a>
     <input class="form-control form-control-dark w-100 rounded-0 border-0" type="text" placeholder="Search" aria-label="Search">
     <div class="navbar-nav">
@@ -17,7 +17,7 @@
         <a class="nav-link px-3" href="#">Sign out</a>
       </div>
     </div>
-  </header>
+  </header> -->
 
     <!-- Esse trecho de codigo serve para aparecer a mensagem de flash do flask -->
   <!-- https://flask.palletsprojects.com/en/2.0.x/patterns/flashing/  documentação da mensagem flash -->
@@ -47,13 +47,13 @@
         <div class="position-sticky pt-3 sidebar-sticky">
           <ul class="nav flex-column">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">
+              <a class="nav-link active" aria-current="page" href="">
                 <span data-feather="home" class="align-text-bottom"></span>
                 Produtos Final
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('allFrascos') }}">
+              <a class="nav-link" href="{{ url_for('frascos.allFrascos') }}">
                 <span data-feather="file" class="align-text-bottom"></span>
                 Frascos
               </a>
