--- a/frascos/templates/editar_frasco.html
+++ b/frascos/templates/editar_frasco.html
@@ -2,7 +2,7 @@
 
 {% block conteudo %}
     <h1>{{ titulo }}</h1>
-    <form action="{{ url_for('salvarEdicaoFrasco') }}" method="post" enctype="multipart/form-data">
+    <form action="{{ url_for('frascos.salvarEdicaoFrasco') }}" method="post" enctype="multipart/form-data">
         <figure class="img thumbnail col-md-4 formularioImagem">
             {% if imagem %}
             <img class="img-fluid img-padrao" src="data:image/jpg;charset=utf-8;base64, {{ imagem }}" alt="Imagem do Frasco">
@@ -28,8 +28,8 @@
                 {{ form.cor(class="form-control") }}
               </div>
               <div style="margin-top: 10px;">
-                {{ form.salvar(class="btn btn-primary") }}
-                <a class="btn btn-danger" href="{{ url_for('allFrascos') }}">Voltar</a>
+                {{ form.salvar(class="btn btn-success") }}
+                <a class="btn btn-primary" href="{{ url_for('frascos.allFrascos') }}">Voltar</a>
               </div>
           </fieldset>
     </form>
