--- a/frascos/templates/frascos.html
+++ b/frascos/templates/frascos.html
@@ -2,7 +2,7 @@
 {% block conteudo %}
   <h2>{{ titulo }}</h2>
   <div>
-    <a href="{{ url_for('newFrasco') }}" type="button" class="btn btn-success">Novo Frasco</a>
+    <a href="{{ url_for('frascos.newFrasco') }}" type="button" class="btn btn-success">Novo Frasco</a>
   </div>
   <div class="table-responsive">
     <table class="table table-striped table-sm">
@@ -20,8 +20,8 @@
           <td>{{ frasco.nome }}</td>
           <td>{{ frasco.cor }}</td>
           <td>
-            <a href="{{ url_for('editarFrasco', id=frasco.id) }}" type="button" class="btn btn-outline-primary">Editar</a>
-            <a href="{{ url_for('deletarFrasco', id=frasco.id) }}" type="button" class="btn btn-outline-danger">Deletar</a>
+            <a href="{{ url_for('frascos.editarFrasco', id=frasco.id) }}" type="button" class="btn btn-outline-primary">Editar</a>
+            <a href="{{ url_for('frascos.deletarFrasco', id=frasco.id) }}" type="button" class="btn btn-outline-danger">Deletar</a>
           </td>
         </tr>
         {% endfor %}
