--- a/templates/template_principal.html
+++ b/templates/template_principal.html
@@ -59,7 +59,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">
+              <a class="nav-link" href="{{ url_for('fitas.allFitas') }}">
                 <span data-feather="shopping-cart" class="align-text-bottom"></span>
                 Fitas
               </a>
