--- a/fitas/templates/nova_fita.html
+++ b/fitas/templates/nova_fita.html
@@ -24,8 +24,8 @@
               {{ form.descricao(class="form-control") }}
             </div>
             <div class="form-group inputBox">
-              {{ form.tamanho_corte.label(class="form-label") }}
-              {{ form.tamanho_corte(class="form-control") }}
+              {{ form.tamanho_corte_mm.label(class="form-label") }}
+              {{ form.tamanho_corte_mm(class="form-control") }}
             </div>
             <div style="margin-top: 10px;">
               {{ form.salvar(class="btn btn-primary") }}
