--- a/templates/template_principal.html
+++ b/templates/template_principal.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>SITE</title>
+    <title>Racional</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='principal.css') }}">
   </head>
@@ -65,9 +65,9 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">
+              <a class="nav-link" href="{{ url_for('cliches.allCliches') }}">
                 <span data-feather="shopping-cart" class="align-text-bottom"></span>
-                Cliche
+                Clichês
               </a>
             </li>
 
