--- a/produtos_final/templates/produtos_edit.html
+++ b/produtos_final/templates/produtos_edit.html
@@ -2,22 +2,22 @@
 
 {% block conteudo %}
     <h1>{{ titulo }}</h1>
-    <form action="{{ url_for('salvar') }}" method="post">
+    <form action="{{ url_for('produtos.salvar') }}" method="post">
         <input type="hidden" name="id" value="{{ produto.id }}">
         <div  class="form-group">
             <div  class="col-md-5">
-                <label for="produto">Produto</label>
-                <input type="text" class="form-control" name="produto" id="produto" value="{{ produto.nome }}">
+                <label for="produto">Codigo</label>
+                <input type="text" class="form-control" name="produto" id="produto" value="{{ produto.codigo }}">
             </div>
         </div>
         <div  class="form-group">
             <div  class="col-md-5">
-                <label for="descricao">Descrição</label>
-                <input type="text" class="form-control" name="descricao" id="descricao" value="{{ produto.descricao }}">
+                <label for="descricao">Nome</label>
+                <input type="text" class="form-control" name="descricao" id="descricao" value="{{ produto.nome }}">
             </div>
         </div>
         <div class="form-group buttons">
-            <a href="{{ url_for('index') }}" class="btn btn-primary" type="button" >Voltar</a>
+            <a href="{{ url_for('produtos.index') }}" class="btn btn-primary" type="button" >Voltar</a>
             <button type="submit" class="btn btn-success" >Salvar</button>
         </div>
     </form>
