--- a/produtos_final/templates/produto_novo.html
+++ b/produtos_final/templates/produto_novo.html
@@ -19,15 +19,15 @@
         <div class="form-group">
             <div class="col-md-5">
                 <!-- {{ form.frasco_id.label }} -->
-                {{ form.frasco_id(class="form-select form-select-sm") }}
+                {{ form.frasco_id(class="form-select form-select-sm", style="font-weight: bold;") }}
             </div>
             <div class="col-md-5">
                 <!-- {{ form.fita_id.label }} -->
-                {{ form.fita_id(class="form-select form-select-sm") }}
+                {{ form.fita_id(class="form-select form-select-sm", style="font-weight: bold;") }}
             </div>
             <div class="col-md-5">
                 <!-- {{ form.cliche_id.label }} -->
-                {{ form.cliche_id(class="form-select form-select-sm") }}
+                {{ form.cliche_id(class="form-select form-select-sm", style="font-weight: bold;") }}
             </div>
             <!-- <div  class="col-md-5">
                 <select class="form-select" aria-label="Small select example" name="frasco_id">
