--- a/templates/template_principal.html
+++ b/templates/template_principal.html
@@ -52,12 +52,12 @@
       <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-body-tertiary sidebar collapse vh-100">
         <div class="position-sticky pt-3 sidebar-sticky">
           <ul class="nav flex-column">
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="{{ url_for('produtos.index') }}">
                 <span data-feather="home" class="align-text-bottom"></span>
                 Produtos Final
               </a>
-            </li>
+            </li> -->
             <li class="nav-item">
               <a class="nav-link" href="{{ url_for('frascos.allFrascos') }}">
                 <span data-feather="file" class="align-text-bottom"></span>
@@ -70,12 +70,12 @@
                 Fitas
               </a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link" href="{{ url_for('cliches.allCliches') }}">
                 <span data-feather="shopping-cart" class="align-text-bottom"></span>
                 Clichês
               </a>
-            </li>
+            </li> -->
 
           <!-- <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-body-secondary text-uppercase">
             <span>Saved reports</span>
