--- a/produtos_final/templates/produto_novo.html
+++ b/produtos_final/templates/produto_novo.html
@@ -51,7 +51,7 @@
             </div> -->
         </div>
         <div class="form-group buttons">
-            <a href="{{ url_for('produtos.index') }}" class="btn btn-primary" type="button" >Voltar</a>
+            <a href="{{ url_for('produtos.allProducts') }}" class="btn btn-primary" type="button" >Voltar</a>
             <button type="submit" class="btn btn-success">Salvar</button>
         </div>
     </form>
