--- a/templates/template_principal.html
+++ b/templates/template_principal.html
@@ -9,17 +9,8 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='principal.css') }}">
   </head>
 <body>
-  <!-- <header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-20 shadow">
-    <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3 fs-6" href="#">Racional</a>
-    <input class="form-control form-control-dark w-100 rounded-0 border-0" type="text" placeholder="Search" aria-label="Search">
-    <div class="navbar-nav">
-      <div class="nav-item text-nowrap">
-        <a class="nav-link px-3" href="#">Sign out</a>
-      </div>
-    </div>
-  </header> -->
 
-    <!-- Esse trecho de codigo serve para aparecer a mensagem de flash do flask -->
+     <!-- Esse trecho de codigo serve para aparecer a mensagem de flash do flask -->
   <!-- https://flask.palletsprojects.com/en/2.0.x/patterns/flashing/  documentação da mensagem flash -->
   {% with messages = get_flashed_messages() %}
   {% if messages %}
@@ -47,13 +38,30 @@
   {% endif %}
 {% endwith %}
 
+
+  <!-- <header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-20 shadow">
+    <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3 fs-6" href="#">Racional</a>
+    <input class="form-control form-control-dark w-100 rounded-0 border-0" type="text" placeholder="Search" aria-label="Search">
+    <div class="navbar-nav">
+      <div class="nav-item text-nowrap">
+        <a class="nav-link px-3" href="{{ url_for('login.logout') }}">Sign out</a>
+      </div>
+    </div>
+  </header> -->
+
+  <div style="position: absolute; top: 10px; right: 20px;">
+    <a href="{{ url_for('login.logout') }}">
+        <img src="../static/sair.png" class="icon-deslogar" alt="icone de deslogar" title="Deslogar" > <!-- Ajuste o tamanho conforme necessário -->
+    </a>
+  </div>
+
   <div class="container-fluid">
     <div class="row">
       <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-body-tertiary sidebar collapse vh-100">
         <div class="position-sticky pt-3 sidebar-sticky">
           <ul class="nav flex-column">
             <!-- <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="{{ url_for('produtos.index') }}">
+              <a class="nav-link active" aria-current="page" href="{{ url_for('produtos.allProducts') }}">
                 <span data-feather="home" class="align-text-bottom"></span>
                 Produtos Final
               </a>
@@ -70,12 +78,13 @@
                 Fitas
               </a>
             </li>
-            <!-- <li class="nav-item">
+            <li class="nav-item">
               <a class="nav-link" href="{{ url_for('cliches.allCliches') }}">
                 <span data-feather="shopping-cart" class="align-text-bottom"></span>
                 Clichês
               </a>
-            </li> -->
+            </li>
+
 
           <!-- <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-body-secondary text-uppercase">
             <span>Saved reports</span>
