habilitando aba de produto final

--- a/templates/template_principal.html
+++ b/templates/template_principal.html
@@ -60,12 +60,12 @@
       <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-body-tertiary sidebar collapse vh-100">
         <div class="position-sticky pt-3 sidebar-sticky">
           <ul class="nav flex-column">
-            <!-- <li class="nav-item">
+            <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="{{ url_for('produtos.allProducts') }}">
                 <span data-feather="home" class="align-text-bottom"></span>
                 Produtos Final
               </a>
-            </li> -->
+            </li>
             <li class="nav-item">
               <a class="nav-link" href="{{ url_for('frascos.allFrascos') }}">
                 <span data-feather="file" class="align-text-bottom"></span>
