--- a/produtos_final/templates/produtos.html
+++ b/produtos_final/templates/produtos.html
@@ -1,6 +1,14 @@
 {% extends 'template_principal.html' %}
 {% block conteudo %}
   <h2>{{ titulo }}</h2>
+  <!--  -->
+  <form method="GET" action="{{ url_for('produtos.allProducts', filtrarCodigo=True) }}">
+    <div class="input-group mb-3">
+      <input type="text" name="codigo_filtro" class="form-control" placeholder="Digite o codigo do produto..." aria-label="Recipient's username" aria-describedby="button-addon2">
+      <button type="submit" class="btn btn-secondary" id="button-addon2">Buscar</button>
+    </div>
+</form>
+  <!--  -->
   <div>
     <a href="{{ url_for('produtos.novoProduto') }}" type="button" class="btn btn-success">Novo produto</a>
   </div>
