--- a/produtos_final/templates/produtos.html
+++ b/produtos_final/templates/produtos.html
@@ -4,7 +4,7 @@
   <!--  -->
   <form method="GET" action="{{ url_for('produtos.allProducts', filtrarCodigo=True) }}">
     <div class="input-group mb-3">
-      <input type="text" name="codigo_filtro" class="form-control" placeholder="Digite o codigo do produto..." aria-label="Recipient's username" aria-describedby="button-addon2">
+      <input type="text" name="codigo_filtro" class="form-control" placeholder="Digite o codigo do produto..." aria-label="Recipient's username" aria-describedby="button-addon2" autocomplete="off">
       <button type="submit" class="btn btn-secondary" id="button-addon2">Buscar</button>
     </div>
 </form>
