--- a/templates/template_principal.html
+++ b/templates/template_principal.html
@@ -84,6 +84,14 @@
                 Clichês
               </a>
             </li>
+            {% if session["isAdmin"] == 1 %}
+            <li class="nav-item">
+              <a class="nav-link" href="#">
+                <span data-feather="shopping-cart" class="align-text-bottom"></span>
+                Funcionarios
+              </a>
+            </li>
+            {% endif %}
 
 
           <!-- <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-body-secondary text-uppercase">
@@ -94,7 +102,6 @@
           </h6> -->
         </div>
       </nav>
-      
       
       <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4 mt-4">
         {% block conteudo %}
