--- a/templates/template_principal.html
+++ b/templates/template_principal.html
@@ -16,7 +16,7 @@
   {% if messages %}
     <!-- Gambiarra para alterar a cor da mensagem se for erro -->
     {% if erro %}
-    <div id="flash-messages" style="background-color: rgb(226, 205, 205);position: fixed; top: 0; left: 0; right: 0;  padding: 10px; text-align: center; z-index: 1000;">
+    <div id="flash-messages" style="background-color: rgb(231, 195, 195);position: fixed; top: 0; left: 0; right: 0;  padding: 10px; text-align: center; z-index: 1000;">
     {% else %} 
     <div id="flash-messages" style="background-color: rgb(231, 247, 231);position: fixed; top: 0; left: 0; right: 0;  padding: 10px; text-align: center; z-index: 1000;">
     {% endif %}
@@ -63,7 +63,7 @@
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="{{ url_for('produtos.allProducts') }}">
                 <span data-feather="home" class="align-text-bottom"></span>
-                Produtos Final
+                Produtos Finais
               </a>
             </li>
             <li class="nav-item">
@@ -86,7 +86,7 @@
             </li>
             {% if session["isAdmin"] == 1 %}
             <li class="nav-item">
-              <a class="nav-link" href="#">
+              <a class="nav-link" href="{{ url_for('funcionarios.allFuncionarios') }}">
                 <span data-feather="shopping-cart" class="align-text-bottom"></span>
                 Funcionarios
               </a>
