finalizando aba de funcionarios, e criando aba folha de ponto

--- a/funcionarios/templates/funcionarios.html
+++ b/funcionarios/templates/funcionarios.html
@@ -1,7 +1,7 @@
 {% extends 'template_principal.html' %}
 
 {% block conteudo %}
-    <h2>Funcionarios</h2>
+    <h2>Funcionários</h2>
     <div>
         <a href="{{ url_for('funcionarios.newFuncionario') }}" type="button" class="btn btn-success" >Novo Funcionario</a>
     </div>
