--- a/templates/template_principal.html
+++ b/templates/template_principal.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="pt-br">
   <head>
@@ -84,22 +83,33 @@
                 Clichês
               </a>
             </li>
+            
             {% if session["isAdmin"] == 1 %}
+            <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-body-secondary text-uppercase">
+              <span>Administração</span>
+              <!-- <a class="link-secondary" href="#" aria-label="Add a new report">
+                <span data-feather="plus-circle" class="align-text-bottom"></span>
+              </a> -->
+            </h6>
+
+            
             <li class="nav-item">
               <a class="nav-link" href="{{ url_for('funcionarios.allFuncionarios') }}">
                 <span data-feather="shopping-cart" class="align-text-bottom"></span>
-                Funcionarios
+                Funcionários
+              </a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('folha_de_ponto.allPontos') }}">
+                <span data-feather="shopping-cart" class="align-text-bottom"></span>
+                Folha de ponto
               </a>
             </li>
             {% endif %}
 
 
-          <!-- <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-body-secondary text-uppercase">
-            <span>Saved reports</span>
-            <a class="link-secondary" href="#" aria-label="Add a new report">
-              <span data-feather="plus-circle" class="align-text-bottom"></span>
-            </a>
-          </h6> -->
+      
         </div>
       </nav>
       
