--- a/templates/template_principal.html
+++ b/templates/template_principal.html
@@ -100,12 +100,12 @@
               </a>
             </li>
 
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link" href="{{ url_for('folha_de_ponto.allPontos') }}">
                 <span data-feather="shopping-cart" class="align-text-bottom"></span>
                 Folha de ponto
               </a>
-            </li>
+            </li> -->
             {% endif %}
 
 
