--- a/folha_de_ponto/templates/folha_de_ponto.html
+++ b/folha_de_ponto/templates/folha_de_ponto.html
@@ -7,48 +7,69 @@
             <a href="{{ url_for('folha_de_ponto.newPonto') }}" class="btn btn-success">Novo Ponto</a>
         </div>
         <div class="row justify-content-center">
-            <form action="{{ url_for('folha_de_ponto.calcularSalario') }}" method="post" >
+            <form action="{{ url_for('folha_de_ponto.calcularSalario') }}" method="post">
                 {{ form.csrf_token() }}
                 {{ form.calcular(class="btn btn-primary") }}
-                <div class="form-group col-md-3" >
+                <div class="form-group col-md-3">
                     <strong>{{ form.mes_ano.label(class="form-label") }}</strong>
                     <div style="display: flex; align-items: center;">
-                        {{ form.mes_ano(class="form-control") }}
-                        <a href="#">
+                        {{ form.mes_ano(class="form-control", id="mes_ano_input") }}
+                        <a href="#" id="filter_link">
                             <img src="../static/filter.png" class="icon-deslogar" alt="Ícone de filtrar" title="Filtrar"
-                            style="margin-left: 10px;">
+                                 style="margin-left: 10px;">
                         </a>
                     </div>
                 </div>
             </form>
-        </div>           
+        </div>
     </div>
-   
+
     <div class="table-responsive">
         <table class="table table-striped table-sm">
             <thead>
-                <tr>
-                    <th>ID</th>
-                    <th>Funcionario</th>
-                    <th>Data</th>
-                    <th>Horas</th>
-                    <th>Operações</th>
-                </tr>
+            <tr>
+                <th>ID</th>
+                <th>Funcionario</th>
+                <th>Data</th>
+                <th>Horas</th>
+                <th>Operações</th>
+            </tr>
             </thead>
             <tbody>
-                {% for ponto, funcionario in folha_de_ponto %}
+            {% for ponto, funcionario in folha_de_ponto %}
                 <tr>
                     <td>{{ ponto.id }}</td>
                     <td>{{ funcionario.nome }}</td>
                     <td>{{ ponto.data }}</td>
-                    <td>{{ ponto.horas }}</th>
+                    <td>{{ ponto.horas }}</td>
                     <td>
                         <a href="#" class="btn btn-outline-primary">Editar</a>
-                        <a href="{{ url_for('folha_de_ponto.deletePonto', id=ponto.id) }}" class="btn btn-outline-danger">Deletar</a>
+                        <a href="{{ url_for('folha_de_ponto.deletePonto', id=ponto.id) }}"
+                           class="btn btn-outline-danger">Deletar</a>
                     </td>
                 </tr>
-                {% endfor %}
+            {% endfor %}
             </tbody>
         </table>
     </div>
+
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            var mesAnoInput = document.getElementById("mes_ano_input");
+            var filterLink = document.getElementById("filter_link");
+
+            filterLink.addEventListener("click", function (event) {
+                event.preventDefault();
+                var mesAnoValue = mesAnoInput.value;
+                if (mesAnoValue) {
+                    var url = "{{ url_for('folha_de_ponto.allPontos') }}?mes_ano=" + mesAnoValue;
+                    window.location.href = url;
+                } else {
+                    var currentUrl = window.location.href;
+                    var updatedUrl = currentUrl.split('?')[0];  // Remove os parâmetros da URL
+                    window.history.replaceState(null, null, updatedUrl);
+                }
+            });
+        });
+    </script>
 {% endblock %}
