--- a/produtos_final/templates/produto_novo.html
+++ b/produtos_final/templates/produto_novo.html
@@ -30,6 +30,12 @@
                 {{ form.cliche_id(class="form-select form-select-sm", style="font-weight: bold;") }}
             </div>
         </div>
+        <div class="form-group">
+            <div  class="col-md-5">
+                {{ form.tempo_de_producao.label(class="form-label") }}
+                {{ form.tempo_de_producao(class="form-control") }}
+            </div>
+        </div>
         <div class="form-group buttons">
             <a href="{{ url_for('produtos.allProducts') }}" class="btn btn-primary" type="button" >Voltar</a>
             <button type="submit" class="btn btn-success">Salvar</button>
