FEAT: adicionando forma de calculo na pagina de salario calculado

--- a/folha_de_ponto/templates/salario_calculado.html
+++ b/folha_de_ponto/templates/salario_calculado.html
@@ -1,6 +1,9 @@
 {% extends 'template_principal.html' %}
 
 {% block conteudo %}
+<div>
+    <p style="font-size: 1.1rem;"><strong>Salario</strong> -> (<strong>{{ valor_salario_dia }}</strong> / 9) x Horas trabalhadas</p>
+</div>
 <div class="table-responsive">
     <table class="table table-striped table-sm">
         <thead>
