--- a/templates/template_principal.html
+++ b/templates/template_principal.html
@@ -116,7 +116,7 @@
             {% endif %}
 
             <!-- <li class="nav-item">
-              <a class="nav-link" href="#">
+              <a class="nav-link" href="{{ url_for('pedidos.allOrders') }}">
                 <span data-feather="shopping-cart" class="align-text-bottom"></span>
                 Pedidos
               </a>
