FIX: ajustes para apresentação

--- a/folha_de_ponto/templates/folha_de_ponto.html
+++ b/folha_de_ponto/templates/folha_de_ponto.html
@@ -44,8 +44,7 @@
                     <td>{{ ponto.horas }}</td>
                     <td>
                         <a href="#" class="btn btn-outline-primary">Editar</a>
-                        <a href="{{ url_for('folha_de_ponto.deletePonto', id=ponto.id) }}"
-                           class="btn btn-outline-danger">Deletar</a>
+                        <a href="#" class="btn btn-outline-danger">Deletar</a>
                     </td>
                 </tr>
             {% endfor %}
