--- a/folha_de_ponto/templates/editar_ponto.html
+++ b/folha_de_ponto/templates/editar_ponto.html
@@ -4,19 +4,29 @@
 
 <div class="container">
     <h2>Editar Ponto</h2>
-    <form action="#" method="post">
+    <form action="{{ url_for('folha_de_ponto.saveEditPonto') }}" method="post">
         {{ form.csrf_token() }}
-
+        <input type="hidden" name="id" value="{{ id }}">
+        <div class="form-group">
+            <div class="col-md-5">
+                {{ form.id_funcionario(class="form-select form-select-sm", style="font-weight: bold;") }}
+            </div>
+        </div>
         <div class="form-group">
             <div class="col-md-5">
                 {{ form.data.label(class="form-label") }}
                 {{ form.data(class="form-control") }}
-
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-md-5">
+                {{ form.horas.label(class="form-label") }}
+                {{ form.horas(class="form-control") }}
             </div>
         </div>
         <div class="buttons">
-            {{form.salvar(class="btn btn-success")}}
             <a href="{{ url_for('folha_de_ponto.allPontos') }}" class="btn btn-danger">Cancelar</a>
+            {{form.salvar(class="btn btn-primary")}}
         </div>
     </form>
 
