--- a/pedidos/templates/pedidos.html
+++ b/pedidos/templates/pedidos.html
@@ -4,12 +4,13 @@
     <div class="conteiner">
         <h2>Pedidos</h2>
         <a href="{{ url_for('pedidos.newOrder') }}" class="btn btn-success">Novo Pedido</a>
+        <a href="#" class="btn btn-info">Calcular</a>
         <div class="table-responsive">
             <table class="table table-sm table-striped">
                 <thead>
                     <tr>
                         <th>ID</th>
-                        <th>Numero</th>
+                        <th>Número NFe</th>
                         <th>Produto</th>
                         <th>Quantidade</th>
                         <th>Data pedido</th>
@@ -20,11 +21,14 @@
                     {%  for pedido in pedidos %}
                     <tr>
                         <td>{{ pedido.id }}</td>
-                        <td>{{ pedido.numero }}</td>
+                        <td>{{ pedido.numero_nfe }}</td>
                         <td>{{ pedido.nome }}</td>
                         <td>{{ pedido.quantidade }}</td>
                         <td>{{ pedido.data_do_pedido }}</td>
-                        <td><a href="#" class="btn btn-outline-primary">Calcular</a></td>
+                        <td>
+                            <a href="#" class="btn btn-outline-primary">Editar</a>
+                            <a href="{{ url_for('pedidos.deleteOrder', id=pedido.id) }}" class="btn btn-outline-danger">Deletar</a>
+                        </td>
                     </tr>
                     {% endfor %}
                 </tbody>
