--- a/templates/template_principal.html
+++ b/templates/template_principal.html
@@ -115,12 +115,12 @@
             </li>
             {% endif %}
 
-            <!-- <li class="nav-item">
+            <li class="nav-item">
               <a class="nav-link" href="{{ url_for('pedidos.allOrders') }}">
                 <span data-feather="shopping-cart" class="align-text-bottom"></span>
                 Pedidos
               </a>
-            </li> -->
+            </li>
         </div>
       </nav>
       
