--- a/produtos_final/templates/produtos_edit.html
+++ b/produtos_final/templates/produtos_edit.html
@@ -33,6 +33,12 @@
                 {{ form.cliche_id(class="form-select form-select-sm", style="font-weight: bold;") }}
             </div>
         </div>
+        <div  class="form-group">
+            <div  class="col-md-5">
+                {{ form.tempo_de_producao.label(class="form-label") }}
+                {{ form.tempo_de_producao(class="form-control") }}
+            </div>
+        </div>
         <div class="form-group buttons">
             {{ form.salvar(class="btn btn-success") }}
             <a href="{{ url_for('produtos.allProducts') }}" class="btn btn-primary">Voltar</a>
