FEAT: finalizando funcionalidade de editar pedido

--- a/pedidos/templates/novo_pedido.html
+++ b/pedidos/templates/novo_pedido.html
@@ -13,9 +13,6 @@
         </div>
         <div class="form-group">
             <div class="col-md-5">
-                <!-- {{ form.id_produto.label(class="form-label") }}
-                {{ form.id_produto(class="form-select-sm") }}    -->
-
                 {{ form.id_produto(class="form-select form-select-sm", style="font-weight: bold;") }}
             </div>
         </div>
@@ -27,8 +24,8 @@
         </div>
         <div class="form-group">
             <div class="col-md-5">
-                {{ form.data_pedido.label(class="form-label") }}
-                {{ form.data_pedido(class="form-control") }}   
+                {{ form.data_do_pedido.label(class="form-label") }}
+                {{ form.data_do_pedido(class="form-control") }}   
             </div>
         </div>
         <div style="margin-top: 10px;">
