--- a/pedidos/templates/pedidos_calculado.html
+++ b/pedidos/templates/pedidos_calculado.html
@@ -3,7 +3,7 @@
 {% block conteudo %}
     <div class="conteiner">
         <h2>Tempo de produção dos Pedidos</h2>
-        <p>Calculo: (<strong>Quantidade</strong> X <strong>Tempo de Produção</strong>) / <strong>8</strong>(quantidade de horas trabalhadas em um dia) </p>
+        <p>Calculo: ((<strong>Quantidade</strong> X <strong>Tempo de Produção</strong>)/3600) / <strong>8</strong>(quantidade de horas trabalhadas em um dia) </p>
         <a href="{{ url_for('pedidos.allOrders') }}" class="btn btn-primary">Voltar</a>
         <div class="table-responsive">
             <table class="table table-sm table-striped">
